WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130470
[regression] background colors do not apply to <mo> elements
https://bugs.webkit.org/show_bug.cgi?id=130470
Summary
[regression] background colors do not apply to <mo> elements
Frédéric Wang Nélar
Reported
2014-03-19 10:48:38 PDT
See the attachment
Attachments
testcase
(780 bytes, text/html)
2014-03-19 10:49 PDT
,
Frédéric Wang Nélar
no flags
Details
Patch
(5.82 KB, patch)
2014-03-24 09:15 PDT
,
Frédéric Wang Nélar
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Frédéric Wang Nélar
Comment 1
2014-03-19 10:49:09 PDT
Created
attachment 227198
[details]
testcase
Frédéric Wang Nélar
Comment 2
2014-03-24 08:45:58 PDT
OK, now I have an answer to my queston of
bug 124838 comment 98
... The paint call is necessary to draw the background.
Frédéric Wang Nélar
Comment 3
2014-03-24 09:15:29 PDT
Created
attachment 227652
[details]
Patch
Frédéric Wang Nélar
Comment 4
2014-03-24 09:27:48 PDT
Comment on
attachment 227652
[details]
Patch Clearing flags on attachment: 227652 Committed
r166170
: <
http://trac.webkit.org/changeset/166170
>
Frédéric Wang Nélar
Comment 5
2014-03-24 09:27:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug