[regression] background colors do not apply to <mo> elements. https://bugs.webkit.org/show_bug.cgi?id=130470.

Source/WebCore:

Test: mathml/presentation/tokenElements-background-color.html

* rendering/mathml/RenderMathMLOperator.cpp:
(WebCore::RenderMathMLOperator::paint): always call the parent painting to draw the background.
(WebCore::RenderMathMLOperator::paintChildren): move the special case for invisible operator here.

LayoutTests:

* mathml/presentation/tokenElements-background-color.html: Added.
* mathml/presentation/tokenElements-background-color-expected.html: Added.

Canonical link: https://commits.webkit.org/148702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166170 268f45cc-cd09-0410-ab3c-d52691b4dbfc